--- a/plugin.yml
+++ b/plugin.yml
@@ -14,6 +14,7 @@ permissions:
     description: Permission to use doppelganger commands.
     children:
       doppelganger.help: true
+      doppelganger.reload: true
       doppelganger.info: true
       doppelganger.coords: true
       doppelganger.kill: true
