--- a/config.yml
+++ b/config.yml
@@ -1,370 +1,10 @@
-allow_arbitrary_names: true
+allow_arbitrary_names: false
 
 shapes:
-  diamond_t_ns:
-    enabled: true
-    head: skull_item
-    body:
-    - material: diamond_block
-      offset: [0, -1, -1]
-    - material: diamond_block
-      offset: [0, -1, 1]
-    - material: diamond_block
-      offset: [0, -1, 0]
-    - material: diamond_block
-      offset: [0, -2, 0]
-    summon:
-    - weight: 1.0
-      spawn: ToughWitherSkeleton
-
-  diamond_t_ew:
-    head: skull_item
-    body:
-    - material: diamond_block
-      offset: [-1, -1, 0]
-    - material: diamond_block
-      offset: [1, -1, 0]
-    - material: diamond_block
-      offset: [0, -1, 0]
-    - material: diamond_block
-      offset: [0, -2, 0]
-    summon:
-    - weight: 1.0
-      spawn: ToughWitherSkeleton
-
-  diamond_2pillar:
-    head: pumpkin
-    body:
-    - material: diamond_block
-      offset: [0, -1, 0]
-    - material: diamond_block
-      offset: [0, -2, 0]
-    summon:
-    - weight: 1.0
-      spawn: ToughWitherSkeleton
-
-  gold_diamond_2pillar:
-    head: pumpkin
-    body:
-    - material: gold_block
-      offset: [0, -1, 0]
-    - material: diamond_block
-      offset: [0, -2, 0]
-    summon:
-    - weight: 1.0
-      spawn: ToughPigZombie
-
-  pumpkin:
-    head: pumpkin
-    summon:
-    - weight: 1.0
-      spawn: SpecialBat
-    - weight: 1.0
-      spawn: FlyingPig
-    - weight: 1.0
-      spawn: FlyingSquid
 
 creatures:
-  SpecialBat:
-    spawn: Bat
-    sound: ambience_cave
-
-  ToughWitherSkeleton:
-    spawn: WitherSkeleton
-    sound: wither_spawn
-    lightning:
-      min: 1
-    despawns: false
-    health: 100
-    air: 72000
-    potions:
-    - type: fire_resistance
-    - type: damage_resistance
-    - type: speed
-    - type: regeneration
-    - type: increase_damage
-      amplifier: 2
-    chestplate:
-      item: diamond_chestplate
-      damage: 3
-      dropchance: 0.0
-    leggings:
-      item: diamond_leggings
-      damage: 3
-      dropchance: 0.0
-    weapon:
-      item: diamond_sword
-
-  ToughSkeleton:
-    spawn: Skeleton
-    sound: wither_spawn
-    lightning:
-      min: 1
-    despawns: false
-    health: 100
-    air: 72000
-    potions:
-    - type: fire_resistance
-    - type: damage_resistance
-    - type: speed
-    - type: regeneration
-    - type: increase_damage
-      amplifier: 2
-    chestplate:
-      item: diamond_chestplate
-      damage: 3
-      dropchance: 0.0
-
-  ToughPigZombie:
-    spawn: PigZombie
-    sound: wither_spawn
-    lightning:
-      min: 1
-    despawns: false
-    health: 100
-    air: 72000
-    potions:
-    - type: fire_resistance
-    - type: damage_resistance
-    - type: speed
-    - type: regeneration
-    - type: increase_damage
-      amplifier: 2
-    helmet:
-      item: skull_item
-      dropchance: 1.0
-    weapon:
-      item: diamond_sword
-
-  MolonMan:
-    spawn: Skeleton
-    sound: ambience_cave
-    helmet:
-      item: melon_block
-    weapon:
-      item: stone_sword
-      dropchance: 0.01
-
-  MolonMan2:
-    spawn: Skeleton
-    sound: ambience_cave
-    helmet:
-      item: melon_block
-    chestplate:
-      item: iron_chestplate
-    weapon:
-      item: iron_sword
-      dropchance: 0.01
-
-  InvisibleBat:
-    spawn: Bat
-    sound: wither_spawn
-    potions:
-    - type: invisibility
-      ambient: false
-
-  FlyingPig:
-    spawn: Pig
-    mount: InvisibleBat
-    sound: pig_death
-
-  FlyingSquid:
-    spawn: Squid
-    mount: InvisibleBat
-    sound: swim
-    air: 72000
-        
-  FlyingSaddledPig:
-    spawn: SaddledPig
-    mount: InvisibleBat
-
-  InvisibleBlaze:
-    spawn: Blaze
-    potions:
-    - type: invisibility
-      ambient: false
-    
-  FlyingSkull:
-    spawn: Skeleton
-    despawns: false
-    health: 40
-    mount: InvisibleBlaze
-    potions:
-    - type: invisibility
-    - type: fire_resistance
-    helmet: 
-      item: skull_item
-      dropchance: 0.0
-    weapon:
-      item: bow
-      enchantments:
-      - type: arrow_damage
-        level: 5
-      - type: arrow_fire
-        level: 1
-
-  Notch:
-    health: 80
-    air: 72000
-    spawn: ToughWitherSkeleton
-    despawns: false
-    lightning:
-      min: 4
-      max: 7
-    sound: wither_spawn
-    helmet:
-      item: skull_item
-      dropchance: 1.0
-    chestplate:
-      item: diamond_chestplate
-      damage: 3
-      dropchance: 0.01
-      enchantments:
-      - type: protection_environmental
-        level: 4
-    leggings: 
-      item: diamond_leggings
-      damage: 3
-      dropchance: 0.0
-      enchantments:
-      - type: protection_environmental
-        level: 4
-    weapon:
-      item: diamond_sword
-      damage: 50
-      dropchance: 0.05
-      enchantments:
-      - type: damage_all
-        level: 5
-      - type: fire_aspect
-        level: 2
-    escorts:
-      min: 3
-      max: 8
-      minrange: 1.0
-      maxrange: 5.0
-      summon:
-      - weight: 1.0
-        spawn: FlyingSkull
-
-  jeb_:
-    health: 60
-    air: 72000
-    spawn: ToughSkeleton
-    despawns: false
-    mount: FlyingSaddledPig
-    lightning:
-      min: 4
-      max: 7
-      minrange: 1.0
-      maxrange: 5.0
-      duration: 30
-    helmet:
-      item: skull_item
-      dropchance: 1.0
-    weapon:
-      item: diamond_sword
-      dropchance: 0.05
-    escorts:
-      min: 3
-      max: 8
-      minrange: 1.0
-      maxrange: 5.0
-      summon:
-      - weight: 1.0
-        spawn: FlyingPig
-
-  Dinnerbone:
-    health: 80
-    spawn: ToughSkeleton
-    despawns: false
-    lightning:
-      min: 4
-      max: 7
-      minrange: 1.0
-      maxrange: 5.0
-      duration: 30
-    helmet:
-      item: skull_item
-      dropchance: 1.0
-    weapon:
-      dropchance: 0.05
-      item: diamond_sword
-      enchantments:
-      - type: knockback
-        level: 2
-      - type: fire_aspect
-        level: 2
-      - type: damage_all
-        level: 5
-    escorts:
-      min: 3
-      max: 8
-      minrange: 1.0
-      maxrange: 5.0
-      summon:
-      - weight: 1.0
-        spawn: ToughSkeleton
-
-  Villain:
-    health: 100
-    spawn: ToughWitherSkeleton
-    despawns: false
-    mask: Ooer
-    lightning:
-      min: 4
-      max: 12
-      minrange: 2.0
-      maxrange: 10.0
-      duration: 100
-    helmet:
-      item: skull_item
-      dropchance: 0.5
-    weapon:
-      dropchance: 0.05
-      item: diamond_sword
-      enchantments:
-      - type: knockback
-        level: 2
-      - type: fire_aspect
-        level: 2
-      - type: damage_all
-        level: 5
-    escorts:
-      min: 7
-      max: 12
-      minrange: 2.0
-      maxrange: 20.0
-      duration: 100
-      summon:
-      - weight: 1.0
-        spawn: MolonMan
-      - weight: 0.5
-        spawn: MolonMan2
-      - weight: 0.5
-        spawn: Bat
-
         
 players:
-  Notch:
-    spawn: Notch
-    shapes:
-    - diamond_t_ns
-    - diamond_t_ew
-        
-  jeb_:
-    shapes:
-    - diamond_t_ns
-    - diamond_t_ew
-
-  Dinnerbone:
-    shapes:
-    - diamond_t_ns
-    - diamond_t_ew
-
-  Villain:
-    shapes:
-    - diamond_2pillar
     
 help:
   topic:
