--- a/plugin.yml
+++ b/plugin.yml
@@ -7,14 +7,13 @@ website: http://github.com/totemo/Doppelganger
 commands:
   doppel:
     description: Describes, finds, spawns and kills doppelgangers. See /doppel help.
-    usage: /doppel [help|reload|info|coords|kill|spawn|maintain] <subcommand arguments>
+    usage: /doppel [help|info|coords|kill|spawn|maintain] <subcommand arguments>
     permission: doppel.info
 permissions:
   doppelganger.*:
     description: Permission to use doppelganger commands.
     children:
       doppelganger.help: true
-      doppelganger.reload: true
       doppelganger.info: true
       doppelganger.coords: true
       doppelganger.kill: true
@@ -22,9 +21,6 @@ permissions:
       doppelganger.maintain: true
   doppelganger.help:
     description: Allows you to see Doppelganger command help and needed to use all other /doppel commands.
-    default: op
-  doppelganger.reload:
-    description: Allows you to reload the Doppelganger configuration.
     default: op
   doppelganger.info:
     description: Allows you to list doppelganger types and their attibutes.
