--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 				<includes>
 					<include>plugin.yml</include>
 					<include>config.yml</include>
+					<include>Help.properties</include>
 				</includes>
 			</resource>
 		</resources>
