Add support for custom leather armour colours. Added Blacksmith, Butcher, Farmer, Librarian and Priest as predefined types.

--- a/examples/config.yml
+++ b/examples/config.yml
@@ -155,6 +155,45 @@ creatures:
       min: 1
     despawns: false
     invulnerableticks: 1200
+    chestplate:
+      item: leather_chestplate
+      rgb: [255,0,0]
+
+  RedSkeleton:
+    spawn: Skeleton
+    lightning:
+      min: 1
+    despawns: false
+    helmet:
+      item: leather_helmet
+      rgb: [255,0,0]
+    chestplate:
+      item: leather_chestplate
+      rgb: [255,0,0]
+    leggings:
+      item: leather_leggings
+      rgb: [255,0,0]
+    boots:
+      item: leather_boots
+      rgb: [255,0,0]
+  
+  BlueSkeleton:
+    spawn: Skeleton
+    lightning:
+      min: 1
+    despawns: false
+    helmet:
+      item: leather_helmet
+      rgb: [0,0,255]
+    chestplate:
+      item: leather_chestplate
+      rgb: [0,0,255]
+    leggings:
+      item: leather_leggings
+      rgb: [0,0,255]
+    boots:
+      item: leather_boots
+      rgb: [0,0,255]
 
   ToughWitherSkeleton:
     spawn: WitherSkeleton
