--- a/examples/config.yml
+++ b/examples/config.yml
@@ -227,6 +227,70 @@ creatures:
       item: leather_boots
       rgb: [0,0,255]
       
+  RedBabyZombie:
+    spawn: BabyZombie
+    despawns: false
+    helmet:
+      item: leather_helmet
+      rgb: [255,0,0]
+    chestplate:
+      item: leather_chestplate
+      rgb: [255,0,0]
+    leggings:
+      item: leather_leggings
+      rgb: [255,0,0]
+    boots:
+      item: leather_boots
+      rgb: [255,0,0]
+    
+  BlueBabyZombie:
+    spawn: BabyZombie
+    despawns: false
+    helmet:
+      item: leather_helmet
+      rgb: [0,0,255]
+    chestplate:
+      item: leather_chestplate
+      rgb: [0,0,255]
+    leggings:
+      item: leather_leggings
+      rgb: [0,0,255]
+    boots:
+      item: leather_boots
+      rgb: [0,0,255]
+
+  RedBabyPigZombie:
+    spawn: BabyPigZombie
+    despawns: false
+    helmet:
+      item: leather_helmet
+      rgb: [255,0,0]
+    chestplate:
+      item: leather_chestplate
+      rgb: [255,0,0]
+    leggings:
+      item: leather_leggings
+      rgb: [255,0,0]
+    boots:
+      item: leather_boots
+      rgb: [255,0,0]
+
+  BlueBabyPigZombie:
+    spawn: BabyPigZombie
+    despawns: false
+    helmet:
+      item: leather_helmet
+      rgb: [0,0,255]
+    chestplate:
+      item: leather_chestplate
+      rgb: [0,0,255]
+    leggings:
+      item: leather_leggings
+      rgb: [0,0,255]
+    boots:
+      item: leather_boots
+      rgb: [0,0,255]
+
   BabyWolf:
     despawns: false
     spawn: Wolf
