Add option to not warn on invalid name. Fix handling of named hoes. Add /doppel reload.

--- a/Help.properties
+++ b/Help.properties
@@ -2,11 +2,15 @@
 # topics must be a comma-delimited list of help topic keys.
 # variants is a comma-delimited list of arbitrary unique IDs for variant forms of a command.
 
-topics:                      help,info,coords,kill,spawn,maintain
+topics:                      help,reload,info,coords,kill,spawn,maintain
 
 help.variants:               1
 help.1.usage:                &r&f/&6doppel help &f[&6info&f|&6coords&f|&6kill&f|&6spawn&f|&6maintain&f]
 help.1.description:          &r&f    Show descriptions of &6/doppel &fsubcommands.
+
+reload.variants:             1
+reload.1.usage:              &r&f/&6doppel reload
+reload.1.description:        &r&f    Reload the Doppelganger configuration.
 
 info.variants:               list,shape,creature,player
 info.header:                 &r&eAlternatives:
