--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.totemo</groupId>
 	<artifactId>Doppelganger</artifactId>
-	<version>0.10.0</version>
+	<version>0.11.0</version>
 	<packaging>jar</packaging>
 	<name>Doppelganger</name>
 	<description>Provides custom, summonable mobs that are reminiscent of the built-in golem types.</description>
@@ -49,7 +49,7 @@
 						<archive>
 							<addMavenDescriptor>false</addMavenDescriptor>
 						</archive>
-						<finalName>Doppelganger</finalName>
+						<finalName>${project.artifactId}-${project.version}</finalName>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -57,8 +57,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>2.0.2</version>
 					<configuration>
-						<source>1.5</source>
-						<target>1.5</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
