--- a/plugin.yml
+++ b/plugin.yml
@@ -4,6 +4,7 @@ version: ${project.version}
 description: ${project.description}
 author: totemo
 website: ${project.url}
+api-version: 1.14
 
 commands:
   doppel:
